syntax = "proto3";

option go_package = "github.com/devodev/grpc-demo/internal/demo";

package demo;

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}

service HelloService {
    rpc GetHello (HelloRequest) returns (HelloResponse);
}
